--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5"
   },
   "scripts": {
@@ -42,8 +42,10 @@
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
     "webpack-bundle-tracker": "^0.4.3",
     "webpack-cli": "^4.3.0"
   }
