--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "webpack --config webpack.config.js --watch --mode development",
-    "build": "webpack --config webpack.config.js --mode production",
+    "build": "react-scripts build && sudo rm -r -f ../backend/client/static/js ../backend/client/templates/index.html && sudo cp -r build/static/js ../backend/client/static/js && sudo cp build/index.html ../backend/client/templates/index.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,14 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.1",
-    "style-loader": "^2.0.0",
-    "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^4.3.0"
-  }
+  "devDependencies": {}
 }
